--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Anilist+ for Anilist",
-    "version": "0.2.0",
+    "version": "0.3.0",
   
     "description": "Enhanced AniList experience",
   
@@ -12,8 +12,8 @@
       {
         "matches": ["*://anilist.co/*"],
         "js": [
-          "list_visual_changes.js", 
-          "content_DAO.js"
+          "list_visual_changes.js",
+          "content-script.js"
         ],
         "run_at": "document_end",
         "all_frames": true
