--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,8 @@
     "short_name": "AniList+",
 
     "icons": {
-      "48": "images/icon.png"
+      "16": "images/icon16.png",
+      "48": "images/icon48.png"
     }
 }
   
